# imperial-police-2

./: .example.env  .gitignore  LICENSE  Makefile  README.md  compose.yml  pyproject.toml  run_command.py
.github/workflows/: python.yml
docker/postgres/: Dockerfile
docker/postgres/initdb/: create_db.sql
docker/python/: Dockerfile
src/imperial_police_2/: __init__.py  config.py
src/imperial_police_2/injector/: container.py
test/: test_sample.py
