[project]
name = "imperial-police-2"
version = "0.1.0"
description = "2nd generation of imperial police bot."
authors = [
    { name = "Colk-tech", email = "colk@approvers.dev" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/imperial_police_2"]
