[project]
name = "imperial-police-2"
version = "0.1.0"
description = "2nd generation of imperial police bot."
authors = [
    { name = "Colk-tech", email = "colk@approvers.dev" }
]
dependencies = [
    "python-dotenv>=1.0.1",
    "alembic>=1.13.1",
    "injector>=0.21.0",
    "pydantic>=2.7.4",
    "pydantic-config>=0.3.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.10.0",
    "flake8>=7.0.0",
    "black>=24.4.2",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/imperial_police_2"]
